--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,31 @@ version: '3.8'
 
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    container_name: php_web
     ports:
       - "8080:80"
-    volumes:
-      - ./html:/var/www/html
-  mysql:
+    networks:
+      - my_network
+    depends_on:
+      - db
+
+  db:
     image: mysql:5.7
-    restart: always
+    container_name: mysql_db
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: fromage_db
       MYSQL_USER: fromage_user
       MYSQL_PASSWORD: fromage_password
     volumes:
       - db_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - my_network
+
+networks:
+  my_network:
 
 volumes:
   db_data:
