--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,24 @@
-version: '3.8'
-
 services:
   web:
-    build: .
+    build:
+      context: ./web
+      dockerfile: Dockerfile  # Simpler Dockerfile without MySQLi
     container_name: php_web
     ports:
       - "8080:80"
     networks:
-      - my_network
+      - public_network
+      - private_network
+    depends_on:
+      - internal_api
+
+  internal_api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile  # Dockerfile with MySQLi for API interaction
+    container_name: internal_api
+    networks:
+      - private_network
     depends_on:
       - db
 
@@ -23,10 +34,11 @@ services:
       - db_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
-      - my_network
+      - private_network
 
 networks:
-  my_network:
+  public_network:
+  private_network:
 
 volumes:
   db_data:
