--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,54 @@
-version: '3.8'
-
 services:
   web:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./web
+      dockerfile: Dockerfile  
+    container_name: php_web
     ports:
       - "8080:80"
-    volumes:
-      - ./html:/var/www/html
-  mysql:
-    image: mysql:5.7
-    restart: always
+    networks:
+      - public_network
+      - private_network
+    depends_on:
+      - internal_api
+
+  internal_api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile 
+    container_name: internal_api
+    networks:
+      - private_network
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0  
+    container_name: mysql_db
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: fromage_db
       MYSQL_USER: fromage_user
       MYSQL_PASSWORD: fromage_password
     volumes:
       - db_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - private_network
+
+  pentest:
+    image: ubuntu:latest 
+    container_name: pentest_container
+    networks:
+      - public_network
+      - private_network
+    tty: true  
+    stdin_open: true  
+    command: sleep infinity  
+
+networks:
+  public_network:
+  private_network:
 
 volumes:
   db_data:
